k8s/kyverno/tests/resources/compliant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod
  namespace: default
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: nginx:1.27
      securityContext:
        privileged: false
        runAsNonRoot: true
        allowPrivilegeEscalation: false
