k8s/kyverno/tests/resources/hostnamespace-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostnamespace-pod
  namespace: default
spec:
  hostNetwork: true
  hostPID: true
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: nginx:1.27
      securityContext:
        runAsNonRoot: true
