k8s/kyverno/tests/resources/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  namespace: default
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: nginx:1.27
      securityContext:
        privileged: true
        runAsNonRoot: true
