k8s/kyverno/tests/resources/root-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: root-pod
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:1.27
